# rust-raytracer

./: .gitignore  Cargo.toml  LICENSE  _config.yml  about.md  example.json  scene.json
_posts/: 2014-09-29-hello-world.md  2014-10-13-hello-world.markdown  2014-10-13-welcome-to-jekyll.markdown  2014-10-14-polymorphic-lighting.md
css/: main.css
notes/: Intersection math.ipynb
notes/.ipynb_checkpoints/: Intersection math-checkpoint.ipynb
src/: image_types.rs  main.rs  parse_scene.rs  scene.rs  types.rs
src/parse_scene/: lights.rs  materials.rs  mod.rs  objects.rs
src/scene/: illuminator.rs  intersectable.rs  mod.rs  scene_lights.rs  scene_objects.rs  util.rs
