[package]

name = "raytracer"
version = "0.0.1"
authors = ["Caleb Jones <bionicle.dragon@gmail.com>"]

[dependencies.lodepng]

git = "https://github.com/pornel/lodepng-rust.git"

[dependencies.cgmath]

git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.sdl2]

git = "https://github.com/AngryLawyer/rust-sdl2.git"
